--- a/个人主页1-1.html
+++ b/个人主页1-1.html
@@ -103,7 +103,7 @@ body {
   min-height: 1px;
   padding-right: 15px;
   padding-left:40px;float: left;}
-  .item .pic { float:left;margin-right:10px;width:100px;height:100px;padding-left:5em  }  
+  .item .pic { float:left;margin-right:10px;width:100px;height:100px;padding-left:5em ; }  
 .about-grid {float:right;width:500px;padding-right: 5em;	margin: 4em 0 0;}
 .about-grid-right h2{
 	font-size:2em;
@@ -358,8 +358,8 @@ body {
   .diva{font-size:1.5em;}
   .divb{margin-left:100px}
   .divc{margin-left:150px}
-.divd{margin-left:300px}
-.dive{margin-left:1050px;}
+.divd{margin-left:150px}
+.dive{margin-left:180px;}
 
 
   </style>
@@ -536,7 +536,7 @@ body {
                   </div>
                   <div class="clearfix"> </div></div>
         </div>
-        <div class="about3" id="call me"><h1>call me</h1></div> 
+        <div class="about3" id="call me"><h1>call me</h1></div> <br><br><br>
        <div><img src="http://pic.58pic.com/58pic/14/87/78/70V58PICxqU_1024.jpg" alt="" width="50px" class="imga">
       <img src="http://img01.jituwang.com/170428/256974-1F42PI32286.jpg" alt="" width="50px" class="imgb">
     <img src="http://pic.58pic.com/58pic/15/93/56/82X58PIC7Ca_1024.jpg" alt="" width="50px" class="imgc">
@@ -544,8 +544,8 @@ body {
   <div class="diva">
     <div class="divb">15998837418
         <span class="divc"> 673968070@qq.com</span>
-    <img src="" alt="" class="divd">
-    <img src="http://m.qpic.cn/psb?/V144ER3s0l19uc/modaCmKJyDlx4b8*XwxyCWSTSoGBX.pcesO0TcexRCU!/b/dF4BAAAAAAAA&bo=VwIQAQAAAAADB2Y!&rf=viewer_4" alt="" width="100px" class="dive"></div>
+    <img src="http://m.qpic.cn/psb?/V144ER3s0l19uc/TDoryFXcfpnvuXpwV5rejBH7yO86r6bPqHrAT7v7M*E!/b/dJEAAAAAAAAA&bo=LAEsAQAAAAADByI!&rf=viewer_4" alt="" class="divd" width="150px">
+    <img src="http://m.qpic.cn/psb?/V144ER3s0l19uc/modaCmKJyDlx4b8*XwxyCWSTSoGBX.pcesO0TcexRCU!/b/dF4BAAAAAAAA&bo=VwIQAQAAAAADB2Y!&rf=viewer_4" alt="" width="100px" class="dive">
   </div><br><br><br>
         
 
